# deecodex

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX_COMPAT.md  Cargo.toml  DEVELOPMENT.md  IMPROVEMENT_PLAN.md  LICENSE  README.md  RELEASE_NOTES.md  VERSION  WORKTREES.md  deecodex.bat  deecodex.sh  install.ps1  install.sh  测试.md
.cargo/: config.toml
.deecodex/: accounts.json  config.json
.githooks/: pre-commit
deecodex-gui/: .gitignore  .taurignore  Cargo.toml  DESIGN.md  build.rs  deecodex-gui.bat  deecodex.command  tauri.conf.json  tauri.windows.conf.json
deecodex-gui/examples/: cdp_debug.rs  cdp_threads_probe.rs
deecodex-gui/gui/: index.html
deecodex-gui/gui/css/: app.css
deecodex-gui/gui/js/: accounts-render-smoke.test.js  accounts.js  app-shell.js  client-lifecycle-smoke.test.js  client-lifecycle.js  config-render-smoke.test.js  dex-agent-state.js  dex-agent-state.test.js  dex-assistant-agent.js  dex-assistant-attachments.js  dex-assistant-controls.js  dex-assistant-messages.js  dex-assistant-registry.js  dex-assistant-render-smoke.test.js  dex-assistant-search.js  dex-assistant-shortcuts.js  dex-assistant.js  dex-render-markdown.js  dex-render-markdown.test.js  formatters.js  log-viewer.js  panels-core.js  placeholder-pages.js  plugins-detail.js  plugins-dev.js  plugins-events.js  plugins-exports.js  plugins-market.js  plugins-render-smoke.test.js  plugins.js  request-history-render-smoke.test.js  request-history.js  service-management.js  setup-wizard.js  startup.js  tauri-api.js  theme-config.js  threads-render-smoke.test.js  threads.js  ui-core.js
deecodex-gui/gui/nav/: 01-服务概览.html  01-核心翻译.html  02-协议配置.html  02-桌面端.html  03-执行诊断.html  03-本地能力.html  04-账号管理.html  05-请求历史.html  06-线程聚合.html  07-插件市场.html  07-插件管理.html  08-使用帮助.html  09-DEX助手.html  10-个人中心.html
deecodex-gui/icons/: icon.icns  tray-dex.rgba
deecodex-gui/src/: commands.rs  lib.rs  main.rs
deecodex-gui/src/commands/: cdp_debug.rs  cdp_debug_hook.js  cdp_threads_probe.js  dex.rs  dex_chat.rs  dex_cli.rs  dex_clients.rs  dex_diagnostics.rs  dex_ops.rs  dex_plugins.rs  dex_process.rs  dex_protocol.rs  dex_registry.rs  dex_security.rs  dex_tool_executor.rs  dex_toolchain.rs  dex_workspace.rs  dialogs.rs  logs.rs  mod.rs  plugins.rs  request_history.rs  sessions.rs  threads.rs  upgrade.rs
deecodex-plugins/: Cargo.toml  INTEGRATION.md  PLUGIN_SPEC.md
deecodex-plugins/plugins/deecodex-weixin/: package-lock.json  package.json  plugin.json  tsconfig.json
deecodex-plugins/plugins/deecodex-weixin/src/: auth.ts  channel.ts  gateway.ts  ilink.ts  index.ts  media.ts  rpc-client.ts  types.ts
deecodex-plugins/src/: lib.rs  manager.rs  manifest.rs  process.rs  protocol.rs  rpc.rs  store.rs
deecodex-plugins/templates/node-automation/: index.js  plugin.json
deecodex-plugins/templates/node-tool/: deecodex-plugin.js  index.js  plugin.json
deecodex-plugins/templates/python-datasource/: deecodex_plugin.py  main.py  plugin.json
deecodex-plugins/tests/: integration.rs
deecodex-plugins/tests/fixtures/echo-plugin/: index.js  plugin.json
docs/: ACCEPTANCE_CHECKLIST.md  ACCOUNT_ENDPOINT_VISION.md  APP_UPDATER_RELEASE.md  CODEX_OFFLINE_ZH.md  MODEL_PICKER_CDP_PATCH.md  PLUGIN_MARKETPLACE_ACCEPTANCE.md  PROJECT_HEALTH_NOTES.md  TECH_PREVIEW_ROUTER.md
scripts/: build-tauri-with-updater-key.ps1  build-windows-updater.ps1  prepare-updater-release.sh  prepare-windows-updater-release.ps1  set-release-version.sh  upload-updater-release.sh  verify-updater-release.sh
src/: accounts.rs  anthropic.rs  backup_store.rs  body_filter.rs  cache.rs  capability.rs  cdp.rs  client_integrations.rs  client_threads.rs  codex_config.rs  codex_guard.rs  codex_mcp_sync.rs  codex_router_session.rs  codex_threads.rs  config.rs  dev_pipeline.rs  error_normalize.rs  executor.rs  files.rs  handlers.rs  inject.rs  lib.rs  local_ocr.rs  main.rs  mcp_names.rs  metrics.rs  native_protocols.rs  prompts.rs  (+21 more)
(+16 files in other folders)
