[package]
name = "deecodex"
version = "0.5.0"
edition = "2021"
description = "DeepSeek API → Codex CLI 兼容代理"
license = "MIT"
repository = "https://github.com/liguan-89/deecodex"
keywords = ["codex", "deepseek", "llm", "proxy", "responses-api"]
categories = ["command-line-utilities", "network-programming"]

[lib]
name = "deecodex"
path = "src/lib.rs"

[[bin]]
name = "deecodex"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
bytes = "1"
pin-project-lite = "0.2"
eventsource-stream = "0.2"
async-stream = "0.3"
tokio-stream = "0.1"
