[package]
name = "deecodex"
version = "1.3.15"
edition = "2021"
description = "DeepSeek API → Codex CLI 兼容代理 · 本地 Responses 增强层"
license = "MIT"
repository = "https://github.com/liguan-89/deecodex"
keywords = ["codex", "deepseek", "llm", "proxy", "responses-api"]
categories = ["command-line-utilities", "network-programming"]

[lib]
name = "deecodex"
path = "src/lib.rs"

[[bin]]
name = "deecodex"
path = "src/main.rs"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"

[dependencies]
axum = { version = "0.7", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
bytes = "1"
pin-project-lite = "0.2"
eventsource-stream = "0.2"
async-stream = "0.3"
tokio-stream = "0.1"
base64 = "0.22"
tiktoken-rs = "0.11"
prometheus = "0.14"
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = "0.6"
unicode-width = "0.2"
dotenvy = "0.15"
toml_edit = "0.22"
